--- a/Points.html
+++ b/Points.html
@@ -1,49 +1,84 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>積分</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    />
 
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
-    integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
-    crossorigin="anonymous"/>
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+      integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+      crossorigin="anonymous"
+    />
 
-  <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous"/>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"><i class="fas fa-shopping-basket"></i>安全喵購物網</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
-                <li class="nav-item"><a class="nav-link" href="order.html">我的訂單</a> </li>
-                <li class="nav-item"><a class="nav-link" href="Profile.html">個人資料</a></li>
-                <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠卷</a></li>
-                <li class="nav-item"><a class="nav-link" href="Points.html">積分</a></li>
-                <li class="nav-item"><a class="nav-link" href="Favorites.html">喜好商品</a></li>
-                <li class="nav-item"><a class="nav-link" href="BrowsingHistory.html">瀏覽紀錄</a></li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="/"
+        ><i class="fas fa-shopping-basket"></i>安全喵購物網</a
+      >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="productList.html">商品列表</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="order.html">我的訂單</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Profile.html">個人資料</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Coupons.html">優惠卷</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Points.html">積分</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Favorites.html">喜好商品</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="BrowsingHistory.html">瀏覽紀錄</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div class="container">
-        <h1>積分</h1>
-        <div class="alert alert-info" role="alert">
-            你目前的積分為：500點。
-        </div>
+      <h1>積分</h1>
+      <div class="alert alert-info" role="alert">你目前的積分為：500點。</div>
     </div>
-</body>
+  </body>
 </html>
+
+
+<script>
+  $.get("Points.php", (data) => {
+    console.log("hi", data);
+  });
+</script>
