--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Peter Chen" />
     <meta name="robots" content="index,follow" />
     <title>安全喵購物網後台管理系統</title>
-    <link rel="stylesheet" href="./css/admin.css" />
+    <link rel="stylesheet" href="../css/admin.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css" />    
   </head>
   <body>
@@ -54,6 +54,6 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
      <!-- axios -->
      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-     <script src="./js/admin.js"></script>
+     <script src="../js/admin.js"></script>
   </body>
 </html>
